# greetings-tst

./: setup.cfg
greetings/: __init__.py
weather_reporter/: __init__.py
