[metadata]
name = greetings-tst
version = 0.1.0
author = Vishal Panchal
author_email = vishal.cybercomcreation@gmail.com
description = A simple package to greet good morning
url = https://github.com/VISHALKUMARPANCHAL/greetings-tst
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
